--- a/sf/src/App.css
+++ b/sf/src/App.css
@@ -26,3 +26,20 @@
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
 }
+
+#sideNav{
+  background:grey;
+}
+iframe{
+  position:fixed;
+  top:0px;
+  left:20%;
+  bottom:0px;
+  right:0px;
+  width:100%;
+  height:100%;
+  border:none;
+  margin:0;
+  padding:0;
+  overflow:hidden;
+}
