--- a/sf/src/App.css
+++ b/sf/src/App.css
@@ -3,7 +3,9 @@
 }
 
 .App-logo {
-  height: 80px;
+  height: 60px;
+  margin-top: 15px;
+  padding:0;
 }
 
 .App-header {
@@ -20,12 +22,89 @@
 .App-intro {
   font-size: large;
 }
-
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+#navLogo{
+  margin-left:130px;
 }
 
-body {
-  background-color: #222;
+#sideNav{
+  text-align: center;
+  background:#243047;
+  height: 100vh;
+  z-index: 40;
+  position: absolute;
+  width:300px;
+}
+.sentext{
+  text-align: left;
+  margin-bottom: 50px;
+}
+input, Button{
+  border-radius:4px;
+  border:none;
+  height: 50px;
+  width:190px;
+  margin-bottom: 10px;
+  margin-left: 8%;
+  outline:none;
+  background: #a4abbc;
+}
+input{
+  padding:10px;
+  font-weight: bold;
+}
+Button, .btn-default{
+  width:50px;
+  margin-left: 2px;
+  transform:translateY(-2px);
+  background-color: #ff0040;
+  border:none;
+}
+Button:hover, .btn-default:hover{
+  background-color: #d40a3d;
+  border:none;
+}
+.glyphicon{
+  color:white;
+}
+iframe{
+  position:fixed;
+  top:0px;
+  left:0;
+  bottom:0px;
+  right:0px;
+  width:100%;
+  height:100%;
+  border:none;
+  margin:0;
+  padding:0;
+  overflow:hidden;
+  z-index:-20;
+}
+.jumbotron{
+  background:#0f1726;
+  height:90px;
+  padding:0;
+  text-align: left;
+  padding-left:115px;
+}
+.arrow-left{
+  margin-top:40vh;
+  width:0;
+  height: 0;
+  border-top: 60px solid transparent;
+  border-bottom: 60px solid transparent;
+  border-left: 60px solid #243047;
+  background: #243047;
+  border-radius:  0 100% 100% 0;
+  z-index: 200;
+  position: absolute;
+}
+#expanded-semi-circle{
+  margin-left:300px;
+}
+.not-shown {
+  display: none;
+}
+.moveCircle{
+  margin-left: 300px;
 }
