--- a/sf/src/App.css
+++ b/sf/src/App.css
@@ -1,5 +1,6 @@
 .App {
   text-align: center;
+  font-family: Verdana;
 }
 
 .App-logo {
@@ -47,6 +48,7 @@ input, Button{
   margin-left: 8%;
   outline:none;
   background: #a4abbc;
+  color:white;
 }
 input{
   padding:10px;
@@ -107,4 +109,21 @@ iframe{
 }
 .moveCircle{
   margin-left: 300px;
+}
+ul{
+  color:white;
+  margin-top: 20px;
+  margin-right: 20px;
+  cursor: pointer;
+}
+li{
+  padding-top:20px;
+  padding-bottom:20px;
+  border-color:#a4abbc;
+  border-style: solid;
+  border-width: 0px 0px 2px 0px;
+  list-style-type: none;
+}
+li:hover, li:active{
+  color:grey;
 }
